# RDQuant

./: .gitignore  LICENSE  README.md  pyproject.toml  rdquant_plan.md  setup.py
benchmarks/: bench_e2e.py  bench_fused_gemv.py  bench_ops.py
benchmarks/accuracy/: run_eval.sh
docs/: fused_mixed_gemv_plan.md  int4_kernel_analysis.md  kernel_benchmark.md  kernel_implementation.md  kernel_survey.md  marlin_tile_engine_extraction.md  operator_plan.md  prefill_acceleration_plan.md  prefill_experiments.md
examples/: quickstart.py  sweep_budget.py
paper/: generate_figures.py  main.aux  main.bbl  main.blg  main.out  main.tex  outline.md  references.bib
paper_int4/: main.tex
rdquant/: __init__.py  awq_scale.py  eval.py  fused_gemv_pack.py  inference.py  int4_eval.py  int4_fusion.py  int4_marlin.py  int4_marlin_e2e.py  int4_quant.py  joint_quant.py  ksplit_quant.py  ops.py  quantize.py
rdquant/core/: __init__.py  act_quant.py  allocator.py  calibrate.py  formats.py  sensitivity.py
rdquant/csrc/: CMakeLists.txt  bindings.cpp  cublas_mxfp8.cu  fused_gemv.cu  int4_postprocess.cu  marlin_fp8_primitives.cuh  marlin_nvfp4_primitives.cuh  rdquant_kernels.h  rdquant_ops.h  sf_layout.cu  w4a8.cu  w6a8.cu  w8a8.cu
rdquant/integrations/: __init__.py  hf_export.py  int4_export.py  vllm_linear.py
tests/: test_act_quant.py  test_allocator.py  test_calibrate.py  test_formats.py  test_fused_inference.py  test_ops.py  test_packed_checkpoint.py  test_quantize.py  test_sensitivity.py
